JAVA-2011: Address compiler warnings.  Address checkstyle, codenarc, and findbugs errors.